--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     let yourOptions = {
 
     // Sheet Information
-    sheetID: "1l_F95Zhyj5OPQ0zs-54pqacO6bVDiH4rlh16VhPNFUc",
+    sheetID: "https://docs.google.com/spreadsheets/d/1_A2womDCZSuET80wagqxmuH_51RHDz9uCNFJ23Jg_OA/edit?usp=sharing",
     sheetPage: "Public Masterlist",
 
     // Amount of items shown on the page. Default is 12.
