--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     let yourOptions = {
 
     // Sheet Information
-    sheetID: "https://docs.google.com/spreadsheets/d/1_A2womDCZSuET80wagqxmuH_51RHDz9uCNFJ23Jg_OA/edit?usp=sharing",
+    sheetID: "1_A2womDCZSuET80wagqxmuH_51RHDz9uCNFJ23Jg_OA",
     sheetPage: "Public Masterlist",
 
     // Amount of items shown on the page. Default is 12.
@@ -91,7 +91,7 @@
     <div class="container">
 
       <!-- Brand -->
-      <a class="navbar-brand" href="#"><i class="bi bi-box2-heart"></i> Charadex</a>
+      <a class="navbar-brand" href="#"><i class="bi bi-box2-heart"></i> Satangs</a>
 
       <!-- Toggle -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#charadexnav">
