--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="shortcut icon" type="image/png" href=""/>
 
   <!-- Title of your site -->
-  <title>Charadex</title>
+  <title>Satangs</title>
 
   <!-- Description of your site -->
   <meta name="description" content="An automated masterlist for your species!">
@@ -102,16 +102,15 @@
       <div class="collapse navbar-collapse" id="charadexnav">
         <ul class="navbar-nav mr-auto">
 
-          <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+          <li class="nav-item"><a class="nav-link" href="https://toyhou.se/~bulletins/2628658.myo">MYO</a></li>
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown">
-              Dropdown
+              Community
             </a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Link</a>
-              <a class="dropdown-item" href="#">Link</a>
+              <a class="dropdown-item" href="https://toyhou.se/~world/213765.satangs">Toyhou.se World</a>
+              <a class="dropdown-item" href="#">Discord</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">Link</a>
             </div>
@@ -206,7 +205,7 @@
   <-- 
   <-------------------------------------------------------------------- -->
   <div class="footer bg-dark p-md-5 p-4 text-center">
-    <p><a class="text-reset" href="">[Species] © [Owner]</a></p>
+    <p><a class="text-reset" href="">Satangs © Freeze-pop88</a></p>
     <p><a href="https://charadex.com">Powered by Charadex</a></p>
   </div>
 
