--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@
   
             <!-- Item -->
             <div class="d-flex justify-content-between mb-2">
-              <b class="text-muted">Worth</b>
-              <span>$<span class="worth"></span></span>
+              <b class="text-muted">Rarity</b>
+              <span><span class="worth"></span></span>
             </div>
               
             <!-- Item -->
