--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           <div class="col-md-2 col-3 p-1">
             <select class="form-control bg-faded" id="search-filter">
               <option>All</option>
-              <option>Worth</option>
+              <option>Rarity</option>
               <option>Owner</option>
               <option>Designer</option>
               <option>Artist</option>
@@ -296,7 +296,7 @@
             <!-- Item -->
             <div class="d-flex justify-content-between mb-2">
               <b class="text-muted">Rarity</b>
-              <span><span class="worth"></span></span>
+              <span><span class="rarity"></span></span>
             </div>
               
             <!-- Item -->
