--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     itemOrder: "desc",
 
     // Columns the search looks through by default
-    searchParams: ['id', 'owner', 'artist', 'designer', 'rarity'],
+    searchParams: ['id', 'owner', 'artist', 'designer', 'notes'],
     };
   </script>
 
