--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="container">
 
       <!-- Brand -->
-      <a class="navbar-brand" href="#"><i class="bi bi-box2-heart"></i> Satangs</a>
+      <a class="navbar-brand" href="freezepop88.github.io/Tang-Masterlist/"><i class="bi bi-box2-heart"></i> Satangs</a>
 
       <!-- Toggle -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#charadexnav">
