--- a/index.html
+++ b/index.html
@@ -99,9 +99,8 @@
             </a>
             <div class="dropdown-menu">
               <a class="dropdown-item" href="https://toyhou.se/~world/213765.satangs">Toyhou.se World</a>
-              <a class="dropdown-item" href="#">Discord</a>
+              <a class="dropdown-item" href="https://discord.gg/BJMBB478xn">Discord</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Link</a>
             </div>
           </li>
 
